# UI_zabolotskih_2020

./: CMakeLists.txt
include/: IBroker.h
src/: CMakeLists.txt
src/compact/: CMakeLists.txt  ICompact.cpp  ICompactImpl.cpp
src/compact/include/: ICompact.h
src/logger/: CMakeLists.txt  ILogger.cpp  ILoggerImpl.cpp
src/logger/include/: ILogger.h
src/set/: CMakeLists.txt  ISet.cpp  ISetImpl.cpp
src/set/include/: ILogger.h  ISet.h  IVector.h
src/vector/: CMakeLists.txt  IVector.cpp  IVectorImpl.cpp
src/vector/include/: ILogger.h  IVector.h
test/: CMakeLists.txt
test/include/: ICompact.h  ILogger.h  ISet.h  IVector.h  compact.h  set.h  test.h  vector_testing.h
test/src/: CMakeLists.txt  compact.cpp  set.cpp  test.cpp  testing.cpp  vector.cpp
